@@ -13,10 +13,10 @@ Depends:
 Imports: 
     loo (>= 0.1.6),
     shinystan (>= 2.2.1),
-    gridExtra (>= 2.0.0),
     lme4 (>= 1.1-11),
     Matrix (>= 1.1.1),
     mgcv (>= 1.8-13),
+    bayesplot,
     coda,
     abind,
     statmod,
@@ -26,7 +26,6 @@ Imports:
     utils,
     parallel,
     grDevices,
-    grid
 Suggests: 
     testthat (>= 0.9.1),
     arm,
