@@ -128,11 +128,9 @@ import(methods)
 import(parallel)
 import(rstan)
 import(stats)
+importFrom(bayesplot,pp_check)
 importFrom(coda,as.mcmc)
 importFrom(grDevices,devAskNewPage)
-importFrom(grid,grid.draw)
-importFrom(grid,grid.newpage)
-importFrom(gridExtra,arrangeGrob)
 importFrom(lme4,VarCorr)
 importFrom(lme4,fixef)
 importFrom(lme4,ngrps)
