@@ -531,6 +531,13 @@ prepare_family <- function(x) {
   family
 }
 
+default_plot_pars <- function() {
+  # list all parameter classes to be included in plots by default
+  c("^b(|cs|m)_", "^sd_", "^cor_", "^sigma", "^rescor", 
+    "^nu$", "^shape$", "^delta$", "^phi$", "^kappa$", 
+    "^zi$", "^hu$", "^ar", "^ma", "^arr", "^simplex_", "^sds_")
+}
+
 extract_pars <- function(pars, all_pars, exact_match = FALSE,
                          na_value = all_pars, ...) {
   # extract all valid parameter names that match pars
