@@ -1,6 +1,7 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/brmsfit-methods.R
 \name{pp_check.brmsfit}
+\alias{pp_check}
 \alias{pp_check.brmsfit}
 \title{Posterior Predictive Checks for \code{brmsfit} Objects}
 \usage{
@@ -63,7 +64,7 @@ for truncated discrete models only
 \code{\link[brms:predict.brmsfit]{predict.brmsfit}}.}
 
 \item{...}{Further arguments passed to the ppc functions
-of the \pkg{bayesplot} package.}
+of the \pkg{\link[bayesplot:bayesplot]{bayesplot}} package.}
 }
 \value{
 A ggplot object that can be further
@@ -75,7 +76,9 @@ of the \pkg{bayesplot} package.
 }
 \details{
 For a detailed explanation of each of the ppc functions, 
-see the documentation of the \pkg{bayesplot} package.
+see the \code{\link[bayesplot:PPC-overview]{PPC}} 
+documentation of the \pkg{\link[bayesplot:bayesplot]{bayesplot}} 
+package.
 }
 \examples{
 \dontrun{
